# scoreboard-clock-led-display-esp-ws2815

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  WIRING.md  compile_flags.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
docs/: connection_flow.md  hardware_setup.md  testing_procedures.md  wiring_diagram.md
include/: display_driver.h  radio_comm.h
main/: CMakeLists.txt  display_driver.c  display_driver.cpp  led_strip_encoder.c  main.c  main.cpp  radio_comm.c  radio_comm.cpp
play_clock/: CMakeLists.txt  README.md  platformio.ini
play_clock/include/: display_driver.h  radio_comm.h
play_clock/test/: CMakeLists.txt  pytest.ini  test_display_driver.cpp  test_integration.cpp
src/: CMakeLists.txt  display_driver.cpp  main.cpp  radio_comm.cpp  test_main.c
test/: CMakeLists.txt  README.md  test_main.cpp  test_radio_comm.cpp
test/component/: CMakeLists.txt  test_mocks.h
